kubernetes/apps/platform/proxmox/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-ip-svc
subsets:
- addresses:
  - ip: 192.168.73.10
  ports:
  - port: 8006
